alteracoes no help, menu vertical bootstrap, include e alteracoes de estilo

--- a/dspace-jspui/src/main/webapp/help/index.html
+++ b/dspace-jspui/src/main/webapp/help/index.html
@@ -13,6 +13,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 <title>DSpace Help</title>
 <link rel="stylesheet" href="../styles.css" type="text/css"/>
+<link rel="stylesheet" href="../theme/thrive/static/css/bootstrap-educacaolivre.css" type="text/css"/>
 </head>
 <body class="help">
 
@@ -25,19 +26,21 @@
   </td>
   </tr>
   </table>
-  <h5><a href="#browse">Browse</a></h5>
-  <h5><a href="#search">Search</a></h5>
-  <h5><a href="#advanced">Advanced Search</a></h5>
-  <h5><a href="#subjectsearch">Subject Category Search</a></h5>
-  <h5><a href="#communities">Communities</a></h5>
-  <h5><a href="#collections">Collections</a></h5>
-  <h5><a href="#login">Sign on to DSpace</a></h5>
-  <h5><a href="#submit">Submit</a></h5>
-  <h5><a href="#formats">File Formats </a></h5>
-  <h5><a href="#handles">Handles</a></h5>  
-  <h5><a href="#mydspace">My DSpace</a></h5>
-  <h5><a href="#subscribe">Edit Profile</a></h5>
-  <h5><a href="#subscribe">Subscribe to E-mail alerts</a></h5>
+  <div aria-label="Vertical button group" role="group" class="btn-group-vertical">  
+  <button class="btn btn-default" type="button" href="#browse">Browse</button>
+  <button class="btn btn-default" type="button" href="#search">Search</button>
+  <button class="btn btn-default" type="button" href="#advanced">Advanced Search</button>
+  <button class="btn btn-default" type="button" href="#subjectsearch">Subject Category Search</button>
+  <button class="btn btn-default" type="button" href="#communities">Communities</button>
+  <button class="btn btn-default" type="button" href="#collections">Collections</button>
+  <button class="btn btn-default" type="button" href="#login">Sign on to DSpace</button>
+  <button class="btn btn-default" type="button" href="#submit">Submit</button>
+  <button class="btn btn-default" type="button" href="#formats">File Formats </button>
+  <button class="btn btn-default" type="button" href="#handles">Handles</button>
+  <button class="btn btn-default" type="button" href="#mydspace">My DSpace</button>
+  <button class="btn btn-default" type="button" href="#subscribe">Edit Profile</button>
+  <button class="btn btn-default" type="button" href="#subscribe">Subscribe to E-mail alerts</button>
+</div>
   <h5>&nbsp;</h5>
  <p>DSpace captures, distributes and preserves digital research products. 
     Here you can find articles, working papers, preprints, technical reports, conference papers 
